<resources>
    <string name="app_name">Hykr</string>
    <string name="title_activity_journey_entry">JourneyEntry</string>
    <string name="journey_button">Enter Journey</string>
    <string name="begin_button">Begin Journey</string>
    <string name="end_journey">End Journey</string>
    <string name="steps">Steps</string>
    <string name="stepDistance">Distance</string>"
    <string name="start_date_time">Start Date/Time</string>
    <string name="end_date_time">End Date/Time</string>
    <string name="enter_button">Enter</string>
    <string name="view_journey">View Journey</string>
    <string name="stepTv">Steps</string>
    <string name="initial_counter_value">0</string>
    <string name="view_journeys">View Journeys</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="view_map">View Map</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="night_mode">Night Mode</string>
    <string name="do_not_enter">Do Not Enter</string>
    <string name="title_activity_view_journey_info">ViewJourneyInfo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps_fragment">Map</string>

    <string name="title_activity_graph">Statistics</string>
    <string name="view_graph">Graphs</string>
    <string name="stepTitle">Steps Journal</string>
    <string name="highestStep">666</string>
    <string name="distTitle">Distance Journal</string>
    <string name="highestDist">777</string>
    <string name="totalJourney">Journeys: </string>
    <string name="totalSteps">Total Steps: </string>
    <string name="summaryInfo">Total Distance: </string>
    <string name="longest_distance">Longest Journey: </string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="not_available">0</string>
    <string name="most_steps_taken">Most Steps: </string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_all_journeys">Delete All Journeys</string>
    <string name="back_to_main">Back to Main</string>


</resources>
