<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/justTheWordSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/stepTv"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stepReadout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/initial_counter_value"
        android:textSize="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/justTheWordSteps" />


    <Button
        android:id="@+id/end_journey_button"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="152dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:onClick="endJourneyClicked"
        android:text="@string/end_journey"
        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/begin_journey_button"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:onClick="beginJourneyClicked"
        android:text="@string/begin_button"
        app:layout_constraintBottom_toTopOf="@+id/end_journey_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/navBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_graph_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:onClick="viewGraphClicked"
                android:text="@string/view_graph" />

            <View
                android:id="@+id/divider"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight=".005"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/view_map_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:onClick="viewMapClicked"
                android:text="@string/view_map"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintVertical_bias="0.686" />

            <View
                android:id="@+id/divider2"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0.005"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/view_journey"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:gravity="center"
                android:onClick="viewJourneysClicked"
                android:text="@string/view_journeys"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepReadout"
                app:layout_constraintVertical_bias="0.857" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <ImageButton
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onPreferencesClicked"
        android:background="@drawable/custom_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

</androidx.constraintlayout.widget.ConstraintLayout>